css/iwamaaikido.css
html {
  height: 100%;
}

body {
  height: 100%;
  font-family: "Helvetica Neue", "Helvetica", "Arial", "Verdana", sans-serif;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
}

header {
  margin-bottom: 2em;
}

.navbar-inverse .navbar-brand {
  color: #ffffff;
}

@media (max-width: 767px) {
  .navbar-inverse .navbar-brand {
    font-size: 14px;
  }
}

.navbar-inverse {
  border-bottom: none;
}

.navbar-inverse .navbar-nav > li > a {
  color: #ffffff;
}

.navbar-inverse .navbar-nav > .active > a,
.navbar-inverse .navbar-nav > .active > a:hover,
.navbar-inverse .navbar-nav > .active > a:focus {
  background-color: #ef4923;
}

.container-fluid {
  padding-left: 0;
  padding-right: 0;
}

.container-fluid > .row > [class*="col-"] {
  padding-left: 0;
  padding-right: 0;
}

section {
  padding-top: 100px;
}

@media (max-width: 767px) {
  .section-full-height {
    min-height: 0;
  }
}

.section-footer {
  padding-top: 50px;
}

/*
section { border: 1px solid red; }
footer { border: 1px solid green; }
.row { border: 1px solid blue; }
 */

